[package]
name = "adts-reader"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
description = "Rust reader for Audio Data Transport Stream (ADTS) frames"
categories = [ "multimedia::audio", "parser-implementations" ]
keywords = [ "ADTS", "MPEG", "AAC", "ISO-13818-7" ]
repository = "https://github.com/dholroyd/adts-reader"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]

[dev-dependencies]
bitstream-io = "0.6.3"
hexdump = "0.1.0"
